WHIRR-368. Add the ability to adjust contents of hadoop-env.sh from a cluster properties file. Contributed by Karel Vervaeke
git-svn-id: https://svn.apache.org/repos/asf/whirr/trunk@1181696 13f79535-47bb-0310-9956-ffa450edef68